--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@ body {
     margin: 0;
     padding: 0;
 }
-
 h1 {
     margin: 20px 0;
 }
 
 #editor-container {
     max-width: 500px;
+    height: 300px;
     margin: 0 auto;
     padding: 0;
     border-radius: 8px;
