--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ h1 {
 
 #editor-container {
     max-width: 500px;
-    height: 300px;
+    min-height: 300px;
     margin: 0 auto;
     padding: 0;
     border-radius: 8px;
